--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,13 +15,15 @@ body{
 
 
 .info{
-    max-width: 400px;
+    max-width: 300px;
     width: 100%;
     background-color: gray;
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.257);
     border-radius: 15px;
     position: absolute;
-    left: 100px;
+    top: 10px;
+    left: 10px;
+    // margin: 0 auto;
     padding: 30px;
     color: white;
     h3{
